@@ -6,6 +6,8 @@ TODO:
 
 2017.8.14	K.L.	<k.l.lambda@gmail.com>
 
+	+	MeshBuilder: added normal inspector.
+
 	+	MeshBuilder: added indices lines parse.
 
 	+	MeshBuilderEditor.cs: draw mesh gizmo.
